repared src for logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="header">
 					<div class="header__logo">
 						<svg class="icon icon-logo">
-							<use xlink:href="img/sprite.svg#icon-logo">#shadow-root (closed)</use>
+							<use xlink:href="icons/sprite.svg#icon-logo">#shadow-root (closed)</use>
 						</svg>
 					</div>
 					<a href="tel:" class="header__phone">8 800 500 50 50</a>
