repared flex for testimonials

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			<h2 class="section__title">
 				Testimonials
 			</h2>
-
+			<div class="tt">
 			<div class="testis">
 				<div class="t">
 					<div class="t__photo" style="background-image: url(img/1.jpg)">
@@ -173,7 +173,7 @@
 					</div>
 				</div>
 			</div>
-
+			</div>
 		</div>
 	</div>
 
