changes after the second rewiev

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ c0.2,0.7,0.4,1.4,0.6,2.4h0.1c0.2-0.8,0.5-1.7,0.6-2.3l1.6-4.7h2.8l0.7,9.5H446.7z"
 			</div>
 			<div class="apart apart_mod-right">
 				<div class="apart__photos">
-					<div class="apart__photo" style="background-image: url(img/1.jpeg)">
+					<div class="apart__photo" style="background-image: url(img/1.jpg)">
 					</div>
-					<div class="apart__photo" style="background-image: url(img/2.jpeg)">
+					<div class="apart__photo" style="background-image: url(img/2.jpg)">
 					</div>
 				</div>
 				<h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
@@ -143,9 +143,9 @@ c0.2,0.7,0.4,1.4,0.6,2.4h0.1c0.2-0.8,0.5-1.7,0.6-2.3l1.6-4.7h2.8l0.7,9.5H446.7z"
  
 			<div class="apart">
 				<div class="apart__photos">
-					<div class="apart__photo" style="background-image: url(img/3.jpeg)">
+					<div class="apart__photo" style="background-image: url(img/3.jpg)">
 					</div>
-					<div class="apart__photo" style="background-image: url(img/4.jpeg)">
+					<div class="apart__photo" style="background-image: url(img/4.jpg)">
 					</div>
 				</div>
 				<h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
@@ -153,9 +153,9 @@ c0.2,0.7,0.4,1.4,0.6,2.4h0.1c0.2-0.8,0.5-1.7,0.6-2.3l1.6-4.7h2.8l0.7,9.5H446.7z"
 
 			<div class="apart apart_mod-left">
 				<div class="apart__photos">
-					<div class="apart__photo" style="background-image: url(img/5.jpeg)">
+					<div class="apart__photo" style="background-image: url(img/5.jpg)">
 					</div>
-					<div class="apart__photo" style="background-image: url(img/6.jpeg)">
+					<div class="apart__photo" style="background-image: url(img/6.jpg)">
 					</div>
 				</div>
 				<h2>Marina Palms / <span>North Miami Beach, FL 33162</span></h2>
@@ -224,7 +224,7 @@ c0.2,0.7,0.4,1.4,0.6,2.4h0.1c0.2-0.8,0.5-1.7,0.6-2.3l1.6-4.7h2.8l0.7,9.5H446.7z"
 			<div class="tt">
 			<div class="testis">
 				<div class="t">
-					<div class="t__photo" style="background-image: url(img/1.jpg)">
+					<div class="t__photo" style="background-image: url(img/steve.jpg)">
 					</div>
 					<h3 class="t__name">Steve Jobs</h3>
 					<div class="t__position">CEO</div>
@@ -236,7 +236,7 @@ c0.2,0.7,0.4,1.4,0.6,2.4h0.1c0.2-0.8,0.5-1.7,0.6-2.3l1.6-4.7h2.8l0.7,9.5H446.7z"
 
 			<div class="testis">
 				<div class="t">
-					<div class="t__photo" style="background-image: url(img/1.jpg);">
+					<div class="t__photo" style="background-image: url(img/steve.jpg);">
 					</div>
 					<h3 class="t__name">Steve Jobs</h3>
 					<div class="t__position">CEO</div>
@@ -248,7 +248,7 @@ c0.2,0.7,0.4,1.4,0.6,2.4h0.1c0.2-0.8,0.5-1.7,0.6-2.3l1.6-4.7h2.8l0.7,9.5H446.7z"
 
 			<div class="testis">
 				<div class="t">
-					<div class="t__photo" style="background-image: url(img/1.jpg);">
+					<div class="t__photo" style="background-image: url(img/steve.jpg);">
 					</div>
 					<h3 class="t__name">Steve Jobs</h3>
 					<div class="t__position">CEO</div>
